--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://hugeota.d.miui.com/20.4.27/miui_MIMAX3_20.4.27_6a348503a7_10.0.zip
-  ROM_NAME: Miui12
+  ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
 jobs:
