--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/20.4.27/miui_MIMAX3_20.4.27_6a348503a7_10.0.zip
+  ROM_URL: http://www.manosp.com/mandfx/dev/miui_RedmiK20_20.5.8_10.0_VIP%40CAADBBFDDD.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
