--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://www.manosp.com/mandfx/more/MI-Max3/miui_MIMAX3_20.2.27_10.0_200227.zip
+  ROM_URL: https://static.cowtransfer.com/e30224a8-e217-4699-91fc-71db7e60ab4b/49e2c95e-6552-4a7f-96cb-b2f9a9602d7f/20200508/MIUI_V12_%E5%B0%8F%E7%B1%B3MAX3_nitrogen_20.5.7_10_%E5%BC%80%E5%8F%91%E7%89%88_57ebca1b_wx%E5%85%AC%E4%BC%97%E5%8F%B7_DROM%E5%88%B7%E6%9C%BA.zip?onett=3df223e060f3338bf5f9543ca2a2eae5&attname=MIUI_V12_%E5%B0%8F%E7%B1%B3MAX%203_nitrogen_20.5.7_10_%E5%BC%80%E5%8F%91%E7%89%88_57ebca1b_wx%E5%85%AC%E4%BC%97%E5%8F%B7_DROM%E5%88%B7%E6%9C%BA.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
