--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://www.manosp.com/mandfx/dev/miui_RedmiNote7Pro_20.5.10_10.0_VIP%40578C769293.zip
+  ROM_URL: https://bigota.d.miui.com/20.5.14/miui_MIMAX3_20.5.14_19f1be2c87_10.0.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
