--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.5.14/miui_MIMAX3_20.5.14_19f1be2c87_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/20.3.26/miui_MIMAX3_20.3.26_819dbc8379_10.0.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
