--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.3.26/miui_MIMAX3_20.3.26_819dbc8379_10.0.zip
+  ROM_URL: https://static.cowtransfer.com/9e4b5d2c-aed0-4873-8f17-e4f946082521%2Ff5292976-a064-4c1c-b105-b5b41d3d5d35%2F%E5%B0%8F%E7%B1%B3%2F%E5%B0%8F%E7%B1%B3Max3%2FMIMAX3-200405.zip?onett=213c284e7e1e9eb291e00bd2c5425025&attname=MIMAX3-200405.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
