--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.5.21/miui_MIMAX3_20.5.21_9d2f801013_10.0.zip
+  ROM_URL: http://www.manosp.com/mandfx/dev/miui_MICC9_20.5.10_10.0_VIP@521A92B635.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
