--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://www.manosp.com/mandfx/dev/miui_RedmiNote7_20.4.11_10.0_VIP@5C188925F8.zip
+  ROM_URL: https://www.manosp.com/mandfx/dev/miui_RedmiNote7_20.5.23_10.0_manosp.com@FFB26C8295.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
