--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://www.manosp.com/mandfx/dev/miui_RedmiNote7_20.5.23_10.0_manosp.com@FFB26C8295.zip
+  ROM_URL: https://static.cowtransfer.com/9e4b5d2c-aed0-4873-8f17-e4f946082521%2Faee26d7c-8212-4384-9187-e2f0f3dd59a3%2FMIMAX3-200525.zip?onett=eab37c1d7145e7a733be7bd4f72f4d8c&attname=MIMAX3-200525.zip
   ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
