--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/9.9.3/miui_MIMAX3_9.9.3_e29dd67c09_9.0.zip
-  ROM_NAME: MIUI for Android 9.0
+  ROM_URL: https://static.cowtransfer.com/cloud-5c459be1-20c5-4e3c-9eed-c117947fa4e8%252F1596420109763%252FMIUI12-5X-Q-20.8.2.zip?t-s=1596420549633&t-c=c36d12dd-6237-4019-a1e7-042b4d16414f&attname=MIUI12-5X-Q-20.8.2.zip&attname=%E5%A5%B6%E7%89%9B%E5%BF%AB%E4%BC%A0.zip
+  ROM_NAME: MIUI for Android 10
   TZ: Asia/Shanghai
 
 jobs:
